@@ -1,0 +1,24 @@
+escape_char /
+<k0101>		<UAC00>
+<k0102>		<UAC01>
+<k0103>		<UAC02>
+<k4001>		<U2170>
+<k4002>		<U2171>
+<k4003>		<U2172>
+<k4036>		<U0394>
+<k5001>		<U2500>
+<k5002>		<U2502>
+<k5003>		<U250C>
+<k6001>		<U3395>
+<k6002>		<U3396>
+<k6003>		<U3397>
+<0>		<U0030>
+<1>		<U0031>
+<2>		<U0032>
+<3>		<U0033>
+<4>		<U0034>
+<5>		<U0035>
+<6>		<U0036>
+<7>		<U0037>
+<8>		<U0038>
+<9>		<U0039>
