@@ -1,5 +1,8 @@
 2000-01-24  Ulrich Drepper  <drepper@cygnus.com>
 
+	* tst-locale.sh: Also enable test5.
+	* tests/test5.ds: New file.
+
 	* locales/gl_ES: New file.
 	Contributed by Jacobo Tarrio <jtarrio@ceu.fi.udc.es>.
 
